# mica

./: Cargo.toml  PLAYGROUND_QUICKSTART.md  PLAYGROUND_SETUP.md  PLAYGROUND_SUMMARY.md  README.md  build-wasm.sh
.github/workflows/: ci.yml  pages.yml
docs/: FINAL_REPORT.md  PLAYGROUND.md  README.md  README_DESIGN.md  SITE_OVERVIEW.md  _config.yml  architecture.html  contributing.html  examples-manifest.json  examples.html  faq.html  features.html  getting-started.html  index.html  index.md  index_backup.html  module_reference.md  playground.html  sitemap.xml  snippets.md  status.md  status_summary.md  tour.md
docs/assets/: futuristic.css  futuristic.js
docs/modules/: cli.md  diagnostics.md  documentation.md  ir.md  lowering.md  pipeline.md  runtime.md  semantics.md  syntax.md  testing.md
docs/roadmap/: compiler.md  ecosystem.md  index.md  milestones.md  next-step.md  tooling.md
docs/wasm/: README.md  mica.d.ts  (+4 more)
examples/: adt.mica  adt_match_exhaustive.mica  adt_match_nonexhaustive.mica  cast_and_patterns.mica  channels.mica  comprehensive_deployment.mica  concurrency_pipeline.mica  demo.mica  effects_and_using.mica  effects_resource_pool.mica  generics_bounds.mica  generics_tree_algorithms.mica  impls.mica  lists_and_loops.mica  loop_control.mica  match_guards.mica  methods.mica  native_entry.mica  results_try.mica  spawn_await.mica  using.mica
scripts/: generate-examples-manifest.js  generate-examples-manifest.sh
src/: ast.rs  check.rs  interpreter.rs  lexer.rs  lib.rs  lower.rs  main.rs  parser.rs  pretty.rs  resolve.rs  tests.rs  token.rs  wasm.rs
(+36 files in other folders)
